<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".MainLoginActivity">

    <TextView
        android:id="@+id/MainLoginDisplayTextUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/MainLoginDisplayTextUser"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/MainLoginDisplayInputTextUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainLoginDisplayTextUser" />

    <TextView
        android:id="@+id/MainLoginDisplayTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/MainLoginDisplayTextPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainLoginDisplayInputTextUser" />

    <EditText
        android:id="@+id/MainLoginDisplayInputTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MainLoginDisplayTextPassword" />

    <Button
        android:id="@+id/MainLoginDisplayLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/MainLoginDisplayLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MainLoginDisplayInputTextPassword" />

    <Button
        android:id="@+id/MainLoginDisplayRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:text="@string/MainLoginDisplayRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MainLoginDisplayLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>