<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".MainRegisterActivity">

    <TextView
        android:id="@+id/MainRegisterDisplayTextUser"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/MainRegisterDisplayTextUser"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/MainRegisterDisplayInputTextUser"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainRegisterDisplayTextUser"/>

    <TextView
        android:id="@+id/MainRegisterDisplayTextMail"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/MainRegisterDisplayTextMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainRegisterDisplayInputTextUser"/>

    <EditText
        android:id="@+id/MainRegisterDisplayInputTextMail"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainRegisterDisplayTextMail"/>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/MainRegisterDisplayInputTextMail">

        <TextView
            android:id="@+id/MainRegisterDisplayTextName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/MainRegisterDisplayTextName"/>

        <EditText
            android:id="@+id/MainRegisterDisplayInputTextName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/MainRegisterDisplayInputTextMail">

        <TextView
            android:id="@+id/MainRegisterDisplayTextSurname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/MainRegisterDisplayTextSurname"/>

        <EditText
            android:id="@+id/MainRegisterDisplayInputTextSurname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>